tests/compile-fail/generic_event_temporary_context_parameter_subset.rs
use sml::sml;

struct Pair<T, U>(T, U);

sml! {
    TemporaryContextSubset<T, U>[temporary_context: &mut Vec<T>] {
        *Idle + event<Pair<T, U>> = X,
    }
}

fn main() {}
